<resources>
    <string name="app_name">Dungeon of Habits</string>
    <string name="logo">Logo</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="repeat">Confirm Password</string>
    <string name="Hint">Lost? Reset here!</string>
    <string name="begin">Let\'s get you started!</string>
    <string name="lost">Don\'t worry!\n We are all lost sometimes.</string>
    <string name="reset">Reset password</string>
    <string name="choose_character">Choose your character!</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="character_name_placeholder">Character Name</string>
    <string name="stat">Stat</string>
    <string name="confirm">Confirm</string>
    <string name="choose_pet">Choose your companion!</string>
    <string name="name_your_pet">Name your pet</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="inventory">Inventory</string>
    <string name="dailies">Dailies</string>
    <string name="tasks">Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="character">Character</string>
    <string name="pet">Pet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="difficulty">Difficulty</string>
    <string name="title">Title</string>
    <string name="battle">Battle</string>
    <string name="due_date">Due Date</string>
    <string name="back">Back</string>
    <string name="character_image">Character Image</string>
    <string name="species">Species</string>
    <string name="open_drawer">Open drawer</string>
    <string name="task_title">Task Title</string>
    <string name="difficulty_medium">Difficulty: Medium</string>
    <string name="due_2025_05_20">Due: 2025-05-20</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="store">Store</string>
    <string name="textview">TextView</string>
    <string name="exp">EXP</string>
    <string name="_0">0</string>
    <string name="coin">Coin</string>
    <string name="welcome_to_shop">Welcome to Shop</string>
    <string name="update">Update</string>
    <string name="wanna_make_some_changes">Wanna make some changes?</string>
    <string name="failed_to_load_profile">Failed to load profile</string>
    <string name="network_error">Network error: %s</string>
    <string name="pet_left_title">Pet left</string>
    <string name="pet_left_message">Your pet has left you due to abandonment.</string>
    <string name="ok">OK</string>
    <string name="hp_lost_title">HP Lost</string>
    <string name="hp_lost_message">You lost %d HP because of uncompleted dailies/tasks.</string>
    <string name="daily_reset_title">Daily Reset</string>
    <string name="daily_reset_message">Your daily tasks have been reset. Ready for a new day!</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="stats_text">LVL %1$d\nHP: %2$d/%3$d\nATK: %4$d   DEF: %5$d\nEXP:%6$d   Gold:%7$d</string>
    <string name="highest_floor">Highest Floor: %d</string>
    <string name="start_battle">Start Battle</string>
    <string name="battle_results">Battle Results</string>
    <string name="battle_results_message">You reached floor %1$d and earned:\n%2$d XP\n%3$d Gold</string>
    <string name="awesome">Awesome!</string>
    <string name="highest_floor_placeholder">Battle to set your record!</string>
</resources>